tdf#145611 sw: fix regression: undoing page breaks

at pages with endnotes.

Added a nullptr check for section to avoid crash on Linux.
It seems, SwSectionFrame::m_pSection can be nullptr at that point.

Regression from commit 4c31b4ef2083087a822c3ae648fd09acc67d2f88
"tdf#139336 sw: fix extra pages of multicolumn sections with footnotes".

Co-authored-by: Tibor Nagy (NISZ)

Change-Id: Iec4ff93df6720d0e62af59117cd03bd3902c0f64
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/125095
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>